# pinax-stripe-light

./: .coveragerc  .gitignore  .pep8  .pylintrc  .travis.yml  AUTHORS  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  check-migrations.sh  copy.sh  dev_requirements.txt  lint.sh  makemigrations.py  mkdocs.yml  requirements.testing.txt  requirements.txt  runtests.py  setup.cfg  setup.py  test-requirements.txt  test.sh  tox.ini  update_webhooks.py
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
docs/: Makefile  api.rst  changelog.rst  conf.py  index.md  index.rst  installation.rst  signals.rst  templatetags.rst  usage.rst
docs/about/: history.md  license.md  release-notes.md
docs/reference/: actions.md  commands.md  hooksets.md  managers.md  middleware.md  signals.md  templates.md  templatetags.md  urls.md  webhooks.md
docs/user-guide/: connect.md  ecommerce.md  getting-started.md  saas.md  settings.md  upgrading.md
payments/: __init__.py  admin.py  conf.py  context_processors.py  forms.py  managers.py  middleware.py  models.py  settings.py  signals.py  tests.py  urls.py  utils.py  views.py
payments/migrations/: 0001_initial.py  0002_auto__del_field_currentsubscription_customer__del_field_currentsubscri.py  0002_customer_questions_asked.py  0003_auto_20150805_0714.py  0003_auto__add_field_currentsubscription_customer.py  0004_auto__add_field_currentsubscription_stripe_id.py
payments/templatetags/: payments_tags.py
payments/tests/: callbacks.py  (+12 more)
pinax/: __init__.py
(+234 files in other folders)
