[isort]
multi_line_output=3
known_django=django
known_third_party=stripe,mock,appconf
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip_glob=*/pinax/stripe/migrations/*

[tool:pytest]
testpaths = pinax/stripe/tests
DJANGO_SETTINGS_MODULE = pinax.stripe.tests.settings
addopts = --reuse-db -ra --nomigrations

[metadata]
name = pinax-stripe
version = 5.0.0
author = Pinax Team
author_email = team@pinaxproject.com
description = an app for integrating Stripe into Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pinax/pinax-stripe/
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Framework :: Django
    Framework :: Django :: 3.2
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = .
packages = find:
install_requires =
    django-appconf>=1.0.1
    stripe>=2.0
    django>=3.2
    pytz>=2021.3
zip_safe = False

[options.packages.find]
where = .
